--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="mx-auto mt-16 flex max-w-2xl sm:mt-24 lg:ml-10 lg:mr-0 lg:mt-0 lg:max-w-none lg:flex-none xl:ml-32">
             <div class="max-w-3xl flex-none sm:max-w-5xl lg:max-w-none">
               <div class="-m-2 rounded-xl bg-gray-900/5 p-2 ring-1 ring-inset ring-gray-900/10 lg:-m-4 lg:rounded-2xl lg:p-4">
-                <img src="components/images/background.jpg" alt="background" class="rounded-md shadow-2xl ring-1 ring-gray-900/10">
+                <img src="components/images/background.jpg" alt="background" class="rounded-md shadow-2xl ring-1 ring-gray-900/10 max-w-3xl">
               </div>
             </div>
           </div>
@@ -59,52 +59,52 @@
         <div class="shadow ring-1 ring-black ring-opacity-5 lg:flex lg:flex-auto lg:flex-col">
           <div class="flex bg-gray-200 text-xs leading-6 text-gray-700 lg:flex-auto">
             <div class="w-full grid grid-cols-4 grid-rows-4 gap-px">
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>1</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>2</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>3</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>4</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>5</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>6</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>7</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>8</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>9</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>10</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>11</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>12</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>13</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>14</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>15</span>
               </div>
-              <div class="relative bg-white px-3 py-2">
+              <div class="bg-white px-3 py-2">
                 <span>16</span>
               </div>
             </div>
